rust/simulator/tests/ui/generated_helper_replay_contract.stderr
error[E0609]: no field `replay` on type `GeneratedEffectSimulationReport`
  --> tests/ui/generated_helper_replay_contract.rs:10:20
   |
10 |     let _ = report.replay;
   |                    ^^^^^^ unknown field
