rust/simulator/tests/ui/generated_helper_replay_contract.rs
use telltale_machine::ProtocolMachineSemanticObjects;
use telltale_simulator::generated::{GeneratedEffectScenario, GeneratedEffectSimulationReport};

fn main() {
    let report = GeneratedEffectSimulationReport::new(
        GeneratedEffectScenario::default(),
        ProtocolMachineSemanticObjects::default(),
        Vec::new(),
    );
    let _ = report.replay;
}
